kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: diary-app
  labels:
    app: diary-app
